--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,16 @@
-version: '3.1'
+version: '3'
 
 services:
 # first service is the mongo image
   mongo:
-    image: mongo:latest
+    image: mongo:5.0.8
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_ADMINUSERNAME:?err}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_ADMINUSERNAME:?err}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_ADMINUSERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_ADMINPASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGODB_DATABASE}
     volumes:
-      - mongodb_data:/data/db
+      - mongo_data:/data/db
     ports:
       - "27017:27017"
 
@@ -20,14 +21,14 @@ services:
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGODB_ADMINUSERNAME:?err}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGODB_ADMINPASSWORD:?err}
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGODB_ADMINUSERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGODB_ADMINPASSWORD}
       ME_CONFIG_MONGODB_SERVER : mongo
+      ME_CONFIG_MONGODB_PORT: 27017
     depends_on: 
       - mongo
 
 
 # declare local mongo driver
 volumes:
-  mongodb_data:
-    driver: local
+  mongo_data:
